# idk

.github/workflows/: CMakeLists.txt  README.md  blank.yml  sdkconfig.defaults
.github/workflows/main/: CMakeLists.txt  Kconfig.projbuild  battery.c  battery.h  board_config.h  countdown_widget.c  countdown_widget.h  display.c  display.h  main.c  music_widget.c  music_widget.h  news_widget.c  news_widget.h  ota.c  ota.h  wifi_manager.c  wifi_manager.h
.github/workflows/partitions/: partitions.csv
